--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,10 @@
     },
     "autoload": {
         "psr-4": {
-            "Curia\\Support\\": ""
+            "Curia\\Collect\\": ""
         },
         "files": [
             "helpers.php"
         ]
-    },
-    "minimum-stability": "dev"
+    }
 }
