--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "doctrine/inflector": "~1.1",
         "symfony/var-dumper": "^3.0"
     },
     "autoload": {
