--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": "^7.1.3",
+        "php": "^5.6 || ^7.0",
         "doctrine/inflector": "~1.1",
         "symfony/var-dumper": "^3.0"
     },
